// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface should add suites to root 1`] = `
Suite {
  "children": Array [
    Suite {
      "children": Array [],
      "description": "test 1",
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": 4,
      },
      "skip": false,
    },
    Suite {
      "children": Array [],
      "description": "test 2",
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": 4,
      },
      "skip": false,
    },
  ],
  "description": "Tests",
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": false,
}
`;

exports[`Interface should create skipped tests inside of suites 1`] = `
Test {
  "description": "child 1",
  "fn": [Function],
  "parent": Suite {
    "children": Array [
      [Circular],
    ],
    "description": "test 5",
    "parent": Suite {
      "children": Array [
        Suite {
          "children": Array [],
          "description": "test 1",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": false,
        },
        Suite {
          "children": Array [],
          "description": "test 2",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": false,
        },
        Suite {
          "children": Array [],
          "description": "test 3",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": true,
        },
        Suite {
          "children": Array [
            Test {
              "description": "child 1",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": 4,
              },
              "skip": false,
            },
          ],
          "description": "test 4",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": true,
        },
        [Circular],
      ],
      "description": "Tests",
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": 4,
      },
      "skip": false,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": 4,
    },
    "skip": true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": true,
}
`;

exports[`Interface should create suites 1`] = `
Suite {
  "children": Array [],
  "description": "test 1",
  "parent": Suite {
    "children": Array [
      [Circular],
    ],
    "description": "Tests",
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": 4,
    },
    "skip": false,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": false,
}
`;

exports[`Interface should create tests inside of suites 1`] = `
Test {
  "description": "child 1",
  "fn": [Function],
  "parent": Suite {
    "children": Array [
      [Circular],
    ],
    "description": "test 4",
    "parent": Suite {
      "children": Array [
        Suite {
          "children": Array [],
          "description": "test 1",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": false,
        },
        Suite {
          "children": Array [],
          "description": "test 2",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": false,
        },
        Suite {
          "children": Array [],
          "description": "test 3",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": true,
        },
        [Circular],
      ],
      "description": "Tests",
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": 4,
      },
      "skip": false,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": 4,
    },
    "skip": true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": false,
}
`;
